minor bug fixes, overflow fixed and changed the temp symbol to look better

--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -11,6 +11,7 @@ html {
 body {
 	background-repeat:repeat-x;
 	font-family: 'PTSansRegular';
+	overflow: hidden;
 }
 
 .container {
